# mt-fast-etl

./: PRD_Part1_Sources_Sinks.md  PRD_Part2_Transforms_Security.md  PRD_Part3_Operations_Reliability.md  README.md  Research_Part1_Core_Dependencies.md  Research_Part2_Connectors_Risk.md  byoc_deployment_plan.md  cloud_marketplace_monetization.md  integration_platform_comparison.md  rust_1to1_pipeline_features.md  rust_data_pipeline_architecture.md  rust_data_pipeline_development_state.md  rust_integration_landscape.md  rust_pipeline_design_patterns.md  rust_pipeline_module_structure.md  sink_connectors_detailed.md  source_connectors.md  source_connectors_detailed.md
rust-data-pipeline/: .gitignore  Cargo.toml  USAGE.md
rust-data-pipeline/crates/connectors-sink/: Cargo.toml
rust-data-pipeline/crates/connectors-sink/src/: factory.rs  lib.rs
rust-data-pipeline/crates/connectors-sink/src/databases/: mod.rs  postgres.rs  stdout.rs
rust-data-pipeline/crates/connectors-source/: Cargo.toml
rust-data-pipeline/crates/connectors-source/src/: factory.rs  lib.rs
rust-data-pipeline/crates/connectors-source/src/brokers/: kafka.rs  mod.rs  stdin.rs
rust-data-pipeline/crates/pipeline-alert/: Cargo.toml
rust-data-pipeline/crates/pipeline-alert/src/: lib.rs
rust-data-pipeline/crates/pipeline-config/: Cargo.toml
rust-data-pipeline/crates/pipeline-config/src/: lib.rs  loader.rs
rust-data-pipeline/crates/pipeline-config/src/secrets/: mod.rs  resolver.rs
rust-data-pipeline/crates/pipeline-core/: Cargo.toml
rust-data-pipeline/crates/pipeline-core/src/: error.rs  lib.rs
rust-data-pipeline/crates/pipeline-core/src/traits/: alert_dispatcher.rs  mod.rs  serializer.rs  sink.rs  source.rs  transformer.rs
rust-data-pipeline/crates/pipeline-core/src/types/: alert.rs  checkpoint.rs  dlq_record.rs  mod.rs  pipeline_config.rs  write_receipt.rs
rust-data-pipeline/crates/pipeline-dlq/: Cargo.toml
rust-data-pipeline/crates/pipeline-dlq/src/: lib.rs
rust-data-pipeline/crates/pipeline-observe/: Cargo.toml
rust-data-pipeline/crates/pipeline-observe/src/: lib.rs
rust-data-pipeline/crates/pipeline-orchestrator/: Cargo.toml
rust-data-pipeline/crates/pipeline-orchestrator/src/: control_plane.rs  engine.rs  lib.rs  rate_limit.rs  worker.rs
rust-data-pipeline/crates/pipeline-orchestrator/src/checkpoint/: manager.rs  mod.rs
rust-data-pipeline/crates/pipeline-schema/: Cargo.toml
rust-data-pipeline/crates/pipeline-schema/src/: lib.rs
rust-data-pipeline/crates/pipeline-serde/: Cargo.toml
rust-data-pipeline/crates/pipeline-serde/src/: lib.rs
rust-data-pipeline/crates/pipeline-transform/: Cargo.toml
rust-data-pipeline/crates/pipeline-transform/src/: chain.rs  field_mapper.rs  filter.rs  lib.rs
rust-data-pipeline/crates/pipeline-wasm/: Cargo.toml
rust-data-pipeline/crates/pipeline-wasm/src/: lib.rs
rust-data-pipeline/src/: main.rs
sinkAnalysis/: alloydb.md  amazon_kinesis.md  amazon_redshift.md  amazon_s3.md  amazon_sqs.md  amazondocumentdbsink.md  apache_iceberg.md  apache_kafka.md  apache_pulsar.md  astra.md  aws_datalake.md  azure_blob_storage.md  azure_synapse.md  azureloganalyticssink.md  bigquery.md  bigquery_denormalized.md  cassandra.md  chroma.md  clickhouse.md  clickhouse_sink_connector.md  convex.md  couchbase.md  csv.md  cumulio.md  customer_io.md  databend.md  databricks.md  deepset.md  delta_lake.md  dev_null.md  doris.md  duckdb.md  dynamodb.md  elasticsearch.md  elasticsearch_strict_encrypt.md  exasol.md  file_chunk_sink.md  firebolt.md  firestore.md  gcs.md  (+70 more)
sourceAnalysis/: 100ms.md  7shifts.md  activecampaign.md  acuity_scheduling.md  adjust.md  adobe_commerce_magento.md  agilecrm.md  aha.md  airbyte.md  aircall.md  airtable.md  akeneo.md  algolia.md  alpaca_broker_api.md  alpha_vantage.md  amazon_ads.md  amazon_kinesis.md  amazon_s3.md  amazon_seller_partner.md  amazon_sqs.md  amplitude.md  apache_iceberg.md  apache_kafka.md  apache_pulsar.md  apify_dataset.md  appcues.md  appfigures.md  appfollow.md  apple_search_ads.md  appsflyer.md  appstore_singer.md  apptivo.md  asana.md  ashby.md  assemblyai.md  auth0.md  aviationstack.md  avni.md  awin_advertiser.md  aws_cloudtrail.md  (+596 more)
