[package]
name = "pipeline-config"
version.workspace = true
edition.workspace = true

[dependencies]
pipeline-core = { path = "../pipeline-core" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
object_store = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
futures = "0.3"
