[package]
name = "pipeline-dlq"
version.workspace = true
edition.workspace = true

[dependencies]
pipeline-core = { path = "../pipeline-core" }
serde_json = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
object_store = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
arrow = { workspace = true }
