[package]
name = "pipeline-orchestrator"
version.workspace = true
edition.workspace = true

[dependencies]
pipeline-core = { path = "../pipeline-core" }
pipeline-config = { path = "../pipeline-config" }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
async-trait = { workspace = true }
governor = { workspace = true }
thiserror = { workspace = true }
axum = { workspace = true }
tower = "0.4"
connectors-source = { path = "../connectors-source" }
connectors-sink = { path = "../connectors-sink" }
